# mtools

./: .gitignore  Makefile.am  README.md  configure.ac
lconv/: Makefile.am  lconv.cpp
lib/: CRegex.cpp  CRegex.h  Conv.h  IOApp.h  Makefile.am
ncut/: Makefile.am  ncut.cpp
regex/: Makefile.am  regex.cpp
seglib/: Makefile.am  build.cpp  csplit.cpp  fword.cpp  fword2.cpp  fword3.cpp  lsplit.cpp  segment.cpp  tools.h
tolist/: tolist.cpp
